// Copyright 2024 The Authors (see AUTHORS file)
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "github.com/team-link/apis/v1alpha2";

// A representation of an event associated with creation/modification of a source team's memberships.
message SourceEvent  {
  // Required. Source team ID.
  string team_id = 1;
}

// A snapshot of a GitHub team's memberships.
message GitHubTeam {
  // Required. GitHub team ID.
  int64 team_id = 1;

  // Required. GitHub Organization ID.
  int64 org_id = 2;

  // Required. GitHub users to be added to the team.
  repeated GitHubUser users = 3;

  // Required. Linked source team IDs. The actual value depends on the source
  // team service API, what value it uses to retrieve the source team.
  repeated string source_team_ids = 4;
}

// A representation of a GitHub User.
message GitHubUser {
  // Required. GitHub user email address.
  string email = 1;

  // GitHub user login/username.
  string login = 2;

  // GitHub user id.
  int64 user_id = 3;

  // Optional. Any additional information such as type of the user (employee, vendor, etc.).
  map<string, string> labels = 15;
}

// TeamMappings represents a list of destination(GitHub) to source team mappings.
message TeamMappings {
  // Required. GitHub to source team mappings.
  repeated TeamMapping team_mappings = 1;
}

// TeamMapping represents a mapping from a destination(GitHub) team to a list of
// source teams. It also contains other required information such as Github
// organization.
message TeamMapping {
  // Required. The ID of the GitHub team.
  int64 github_team_id = 1;

  // Required. The ID of the GitHub organization.
  int64 github_org_id = 2;

  // Required. Source team IDs. The actual value depends on the source team
  // service API, what value it uses to retrieve the source team.
  repeated string source_team_ids = 3;

  // Optional. The name of the GitHub team, note it is changeable and is
  // optional for context.
  string github_team_name = 4;

  // Optional. The name of the GitHub organization, note it is changeable and is
  // optional for context.
  string github_org_name = 5;
}
